# fnichol-cime

./: .cirrus.yml  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README.tpl  build.rs  install.sh  release.toml
.ci/: build-docker-image.sh  cirrus-release.sh  fnichol-cime.manifest.txt
.github/: bors.toml
docs/: install.sh
src/: lib.rs
tests/: version-numbers.rs
