[package]
name = "fnichol-cime"
version = "0.6.0"
authors = ["Fletcher Nichol <fnichol@nichol.ca>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fnichol/fnichol-cime"
documentation = "https://github.com/fnichol/fnichol-cime"
homepage = "https://github.com/fnichol/fnichol-cime"
keywords = ["ci", "example"]
categories = ["rust-patterns"]
description = """
A demonstration of a Rust CI build/test/release workflow supporting
multi-platform testing, binary builds, Docker image building, and Crates.io
publishing.
"""

[features]
default = ["application"]

# Required for building the CLI application. Should be disabled when depending
# on the crate as a library. For example, to use as a library in a Cargo.toml:
# `fnichol-cime = { version = "...", default-features = false }`
application = ["clap"]

[dependencies]
# A CLI-specific dependency
clap = { version = "3.0.0-beta.2", optional = true }

[dev-dependencies]
version-sync = "0.9.2"

[package.metadata.docs.rs]
no-default-features = true
